namespace POOII_Module05_Demeter_TellDontAsk_Console;

public class Point3d
{
    public double X { get; set; }
    public double Y { get; set; }
    public double Z { get; set; }
}
