namespace POOII_Module05_Demeter_TellDontAsk_Console;

public class Triangle
{
    public double Point1X { get; set; }
    public double Point1Y { get; set; }
    public double Point1Z { get; set; }
    public double Point2X { get; set; }
    public double Point2Y { get; set; }
    public double Point2Z { get; set; }
    public double Point3X { get; set; }
    public double Point3Y { get; set; }
    public double Point3Z { get; set; }
}
